fixed:footer text align center

--- a/modern.css
+++ b/modern.css
@@ -154,7 +154,7 @@ dd a:hover {
 }
 
 footer {
-    text-align: left;
+    text-align: center;
     padding: 15px;
     font-size: 0.75rem;
 }
